--- a/Makefile.win
+++ b/Makefile.win
@@ -1,13 +1,13 @@
 # Project: Sudoku
 # Compiler: m68k-Amiga-OS3
 # Compiler Type: MingW 3
-# Makefile created by wxDev-C++ 6.10.2 on 13-01-17 00:09
+# Makefile created by wxDev-C++ 6.10.2 on 14-01-17 00:49
 
 CPP       = m68k-amigaos-g++.exe
 CC        = m68k-amigaos-gcc.exe
 WINDRES   = windres.exe
-OBJ       = output/main.o output/board.o output/application.o output/board_block.o output/board_cell.o output/board_hint_switch.o output/board_guess_switch.o output/board_abstract_switch.o
-LINKOBJ   = output/main.o output/board.o output/application.o output/board_block.o output/board_cell.o output/board_hint_switch.o output/board_guess_switch.o output/board_abstract_switch.o
+OBJ       = output/main.o output/board.o output/application.o output/board_block.o output/board_cell.o output/board_hint_switch.o output/board_guess_switch.o output/board_abstract_switch.o output/puzzle.o
+LINKOBJ   = output/main.o output/board.o output/application.o output/board_block.o output/board_cell.o output/board_hint_switch.o output/board_guess_switch.o output/board_abstract_switch.o output/puzzle.o
 LIBS      = -L"C:/AmiDevCpp/usr/local/amiga/m68k-amigaos/lib" -L"C:/AmiDevCpp/usr/local/amiga/m68k-amigaos/lib/libb/libnix" -s -noixemul -noixemul  
 INCS      = -I"C:/AmiDevCpp/usr/local/amiga/m68k-amigaos/sys-include"
 CXXINCS   = -I"C:/AmiDevCpp/usr/local/amiga/m68k-amigaos/sys-include"
@@ -52,3 +52,6 @@ output/board_guess_switch.o: $(GLOBALDEPS) board_guess_switch.cpp
 
 output/board_abstract_switch.o: $(GLOBALDEPS) board_abstract_switch.cpp
 	$(CPP) -c board_abstract_switch.cpp -o output/board_abstract_switch.o $(CXXFLAGS)
+
+output/puzzle.o: $(GLOBALDEPS) puzzle.cpp
+	$(CPP) -c puzzle.cpp -o output/puzzle.o $(CXXFLAGS)
